--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,22 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary:#4886ee;
+  --gray:#F7F7F7;
+  --light-ivory: #fffffb;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary:var(--primary);
+  --color-light-ivory:var(--light-ivory);
+  --color-gray:var(--gray);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --shadow-box:0px 2px 2px -1px rgba(10, 13, 18, 0.03),
+  0px 4px 5px -2px rgba(10, 13, 18, 0.03),
+  0px 12px 16px 0px rgba(10, 13, 18, 0.08);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,10 +26,22 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} 
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+@keyframes custom-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.custom-spin {
+  animation: custom-spin 1s linear infinite;
 }
